edit readme and add new.md

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>THIS IS ME:<BR>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGANDHARV DALAL<br><font size="4">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFULL STACK WEB DEVELOPER and a  AI ENTHUSIAST  </font></strong>
+              <strong>THIS IS ME:<BR>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGANDHARV DALAL<br><font size="3">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFULL STACK WEB DEVELOPER and a  AI ENTHUSIAST  </font></strong>
             </h1>
             <hr>
           </div>
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
    
-            <h2 class="section-heading text-white"><font size="4">I currently live in New Delhi,India<br>I'm a first year engineering student pursuing BTech in computer science at Maharaja Surajmal institute of Technology. I founded LINNO , a Web development firm. I may not br perfect but I am passionate about my work.My skills range from web development to marketing strategies and building business , to teasing by elder siblings.</font></h2>
+            <h2 class="section-heading text-white"><font size="4">I currently live in New Delhi,India<br>I'm a first year engineering student pursuing BTech in computer science at Maharaja Surajmal institute of Technology. I founded LINNO , a Web development firm. I may not be perfect but I am passionate about my work.My skills range from web development to marketing strategies and building business , to teasing by elder siblings.</font></h2>
             <hr class="light my-4">
             
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
