--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>THIS IS ME:<BR>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGANDHARV DALAL<br><font size="3">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFULL STACK WEB DEVELOPER and a  AI ENTHUSIAST  </font></strong>
+              <strong >GANDHARV DALAL</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
+              <p class="text-faded mb-5" >I'M A FULL STACK WEB DEVELOPER and a  AI ENTHUSIAST </p>
             
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More about me</a>
           </div>
