--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-              <p class="text-faded mb-5" >I'M A FULL STACK WEB DEVELOPER and a  AI ENTHUSIAST </p>
+              <p class="text-faded mb-5" > I'M A FULL STACK WEB DEVELOPER and a  AI ENTHUSIAST </p>
             
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More about me</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find out More about me</a>
           </div>
         </div>
       </div>
